--- a/src/blocks/area-routes/editor.scss
+++ b/src/blocks/area-routes/editor.scss
@@ -16,24 +16,34 @@
 	}
 
 	&__item {
-		margin-bottom: 1rem;
-		background: #fff;
+		position: relative;
 		border: 1px solid #ddd;
 		border-radius: 4px;
+		margin-bottom: 1rem;
+		background: #fff;
+	}
+
+	&__drag-handle {
 		cursor: move;
+		padding: 0.5rem;
+		color: #757575;
+		border-right: 1px solid #ddd;
+
+		.drag-icon {
+			margin: 0;
+			font-size: 1.5rem;
+			line-height: 1;
+			user-select: none;
+		}
 
 		&:hover {
-			border-color: #007cba;
+			background: #f0f0f0;
 		}
+	}
 
-		&[aria-disabled='true'] {
-			cursor: default;
-			opacity: 0.7;
-
-			&:hover {
-				border-color: #ddd;
-			}
-		}
+	&__content {
+		flex-grow: 1;
+		padding: 1rem;
 	}
 
 	&__link {
@@ -56,10 +66,6 @@
 			object-fit: cover;
 			border-radius: 4px;
 		}
-	}
-
-	&__content {
-		flex-grow: 1;
 	}
 
 	&__title {
@@ -85,4 +91,10 @@
 			margin: 0;
 		}
 	}
+}
+
+// Style for when item is being dragged
+.is-dragging {
+	opacity: 0.5;
+	border-style: dashed;
 }
